# care

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  .session-notes  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  terrene.code-workspace
.claude/: VERSION  settings.json  sync-manifest.yaml
.claude/agents/: content-flow-coordinator.md  deep-analyst.md  ecosystem-coordinator.md  open-source-strategist.md  oss-coordinator.md  publication-expert.md  requirements-analyst.md  security-reviewer.md
.claude/commands/: analyze.md  check-upstream.md  journal.md  sync.md
.claude/learning/: observations.jsonl
.claude/rules/: agents.md  boundary-test.md  content-flow.md  cross-repo.md  foundation-independence.md  governance.md  independence.md  no-stubs.md  security.md  (+1 more)
alembic/: env.py  script.py.mako
deploy/: deployment-config.md
docs/: api.md  architecture.md  cookbook.md  getting-started.md  index.md  quickstart.md  rest-api.md
examples/: care-config.yaml  foundation-org.yaml  minimal-config.yaml  minimal-org.yaml  quickstart.py
journal/: 0001-DECISION-care-product-identity.md  0001-DECISION-orchestrator-architecture.md  0002-DECISION-inherit-not-reinvent.md  0002-DECISION-text-first-voice-enhanced.md  0003-DISCOVERY-website-audit-false-positives.md
scripts/: lint_fail_closed.py  restructure_codebase.py  run_seeded_server.py  seed_demo.py  shadow_calibrate.py
tests/: conftest.py  test_api.py  test_generator.py  test_session.py
(+828 files in other folders)
